fix alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -24,14 +24,14 @@ body
 td 
 {
   padding: 10px;
-  vertical-align: middle;
+  vertical-align: middle !important;
 }
 
 td.score,
+td.post-thumbnail,
 td.subreddit
 {
 	text-align: center;
-  vertical-align: middle !important;
 }
 
 a
